--- a/Home/index.html
+++ b/Home/index.html
@@ -313,7 +313,47 @@
         </div>
         <!-- page2 -->
         <div id="work">
-
+            <div id="work-header-container">
+                <div id="work-header-left">
+                    <p>Featured work</p>
+                </div>
+                <div id="work-header-right">
+                    <a href="#projects">
+                        <p>All projects</p>
+                        <i class="ph-light ph-arrow-up-right"></i>
+                    </a>
+                </div>
+            </div>
+            <div id="work-carousel-container">
+                <section id="carousel">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <div></div> <!-- Image -->
+                                <div></div> <!-- Title -->
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div></div> <!-- Image -->
+                                <div></div> <!-- Title -->
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div></div> <!-- Image -->
+                                <div></div> <!-- Title -->
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div></div> <!-- Image -->
+                                <div></div> <!-- Title -->
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </div>
 
     </main>
