--- a/Home/index.html
+++ b/Home/index.html
@@ -328,27 +328,111 @@
                 <section id="carousel">
                     <ul>
                         <li>
-                            <a href="">
-                                <div></div> <!-- Image -->
-                                <div></div> <!-- Title -->
+                            <a href="#projects">
+                                <div class="carousel-card-image-cont">
+                                    <div class="carousel-card-image"></div>
+                                </div> 
+                                <div class="carousel-card-bottom">
+                                    <div class="carousel-card-info">
+                                        <div class="carousel-card-info-left">
+                                            <p>Majestic Inc.</p>
+                                            <div class="carousel-card-info-left-bottom">
+                                                <div class="carousel-left-info-1">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                                <div class="carousel-left-info-2">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-card-info-right">
+                                            <i class="ph-light ph-arrow-up-right"  id="carousel-itag"></i>
+                                        </div>
+                                    </div>
+                                </div> 
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <div></div> <!-- Image -->
-                                <div></div> <!-- Title -->
+                            <a href="#projects">
+                                <div class="carousel-card-image-cont">
+                                    <div class="carousel-card-image"></div>
+                                </div> 
+                                <div class="carousel-card-bottom">
+                                    <div class="carousel-card-info">
+                                        <div class="carousel-card-info-left">
+                                            <p>Majestic Inc.</p>
+                                            <div class="carousel-card-info-left-bottom">
+                                                <div class="carousel-left-info-1">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                                <div class="carousel-left-info-2">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-card-info-right">
+                                            <i class="ph-light ph-arrow-up-right"  id="carousel-itag"></i>
+                                        </div>
+                                    </div>
+                                </div> 
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <div></div> <!-- Image -->
-                                <div></div> <!-- Title -->
+                            <a href="#projects">
+                                <div class="carousel-card-image-cont">
+                                    <div class="carousel-card-image"></div>
+                                </div> 
+                                <div class="carousel-card-bottom">
+                                    <div class="carousel-card-info">
+                                        <div class="carousel-card-info-left">
+                                            <p>Majestic Inc.</p>
+                                            <div class="carousel-card-info-left-bottom">
+                                                <div class="carousel-left-info-1">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                                <div class="carousel-left-info-2">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-card-info-right">
+                                            <i class="ph-light ph-arrow-up-right"  id="carousel-itag"></i>
+                                        </div>
+                                    </div>
+                                </div> 
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <div></div> <!-- Image -->
-                                <div></div> <!-- Title -->
+                            <a href="#projects">
+                                <div class="carousel-card-image-cont">
+                                    <div class="carousel-card-image"></div>
+                                </div> 
+                                <div class="carousel-card-bottom">
+                                    <div class="carousel-card-info">
+                                        <div class="carousel-card-info-left">
+                                            <p>Majestic Inc.</p>
+                                            <div class="carousel-card-info-left-bottom">
+                                                <div class="carousel-left-info-1">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                                <div class="carousel-left-info-2">
+                                                    <i class="ph-light ph-arrow-up-right"></i>
+                                                    <p>test</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-card-info-right">
+                                            <i class="ph-light ph-arrow-up-right"  id="carousel-itag"></i>
+                                        </div>
+                                    </div>
+                                </div> 
                             </a>
                         </li>
                     </ul>
